--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 
+
 <html lang=en">
 	<head>
+		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 		<link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css" rel="stylesheet">
+		<script type="text/javascript" src="http://code.jquery.com/jquery-1.8.0.min.js"></script>
+		<script type="text/javascript" src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.1.0/js/bootstrap.min.js"></script>
+		<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+		<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 		<link rel="stylesheet" href="main.css">
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 		<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
@@ -36,7 +42,6 @@
       	</center>
       </div>
   </div> 
-  <br />
     <div class="blog">
     	<div class="container">
     		<div class="row">
@@ -77,23 +82,23 @@
     </div>
   </div> 
   <br/>
-<div id="nav-wrapper">
-    <div id="nav" class="nav">
-    	<div class="navbar-inner">
-	      <div class="container">
-	        <ul class="pull-left">
-	          <li><a href="#"><font style="font-family: lobster; text-transform: lowercase; font-size: 18px;">jonaranola</font></a></li>
-	          <li><a href="#">Browse</a></li>
-	        </ul>
-	        <ul class="pull-right">
-	          <li><a href="#">Blogs</a></li>
-	          <li><a href="#">Gallery</a></li>
-	          <li><a href="#">Resume</a></li>
-	        </ul>
-	    </div>
-	  </div>
-    </div>
-</div>
+
+    <div class="nav">
+		<div class="container">
+        	<div class="container">
+			    <ul class="pull-left">
+			        <li><a href="#"><font style="font-family: lobster; text-transform: lowercase; font-size: 18px;">jonaranola</font></a></li>
+			        <li><a href="#">Browse</a></li>
+			    </ul>
+			    <ul class="pull-right">
+			        <li><a href="#">Blogs</a></li>
+			        <li><a href="#">Gallery</a></li>
+			        <li><a href="#">Resume</a></li>
+			    </ul>
+			</div>
+	  	</div>
+	</div>
+
 
 
     <div class="learn-more">
@@ -140,7 +145,51 @@
 				</center>
 			</div>
 		  </div>
-
+		  </div>
+		  </div>
+ <div class="container">
+		<div class="row">
+  <br />
+	  	  <div class="col-md-3">
+	  	  	<div class="gallery">
+	  	  		<center>
+	  	  			<img src="img/nav.png">
+					<h3>Travel</h3>
+					<p>From apartments and rooms to treehouses and boats: stay in unique spaces in 192 countries.</p>
+					<p><a href="#" class="boxA">See how to travel on Airbnb</a></p>
+				</center>
+			</div>
+		  </div>
+		  <div class="col-md-3">
+	  	  	<div class="gallery">
+		  	  	<center>
+		  	  		<img src="img/nav.png">
+					<h3>Travel</h3>
+					<p>From apartments and rooms to treehouses and boats: stay in unique spaces in 192 countries.</p>
+					<p><a href="#" class="boxA">See how to travel on Airbnb</a></p>
+				</center>
+			</div>
+	      </div>
+		  <div class="col-md-3">
+	  	  	<div class="gallery">
+		  	  	<center>
+		  	  		<img src="img/nav.png">
+					<h3>Travel</h3>
+					<p>From apartments and rooms to treehouses and boats: stay in unique spaces in 192 countries.</p>
+					<p><a href="#" class="boxA">See how to travel on Airbnb</a></p>
+				</center>
+			</div>
+		</div>
+		  <div class="col-md-3">
+	  	  	<div class="gallery">
+		  	  	<center>
+		  	  		<img src="img/nav.png">
+					<h3>Travel</h3>
+					<p>From apartments and rooms to treehouses and boats: stay in unique spaces in 192 countries.</p>
+					<p><a href="#" class="boxA">See how to travel on Airbnb</a></p>
+				</center>
+			</div>
+		  </div>
 
 	    </div>
 	  </div>
@@ -214,7 +263,6 @@
 	  </div>
     </div>
   </div> 
-  <br />
 	</body>
 
 </html>
