--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div class="jumbotron">
       <div class="container">
-      	<center><h1><div class="name">Jona Rañola</div></h1>
+      	<center><h1><div class="name">jonaranola</div></h1>
       	<hr />
 			<div class="row">
 				<div class="col-md-3"> </div>
@@ -50,22 +50,22 @@
 		  			<div class="blogs">
 						<h3>Travel</h3>
 						<p>From apartments and rooms to treehouses and boats: stay in unique spaces in 192 countries.</p>
-						<p><a href="#" class="boxB">See how to travel on Airbnb</a></p>
+						<p><a href="#" class="boxB">See more</a></p>
 					</div>
 		  			<div class="blogs">
 						<h3>Travel</h3>
 						<p>From apartments and rooms to treehouses and boats: stay in unique spaces in 192 countries.</p>
-						<p><a href="#" class="boxB">See how to travel on Airbnb</a></p>
+						<p><a href="#" class="boxB">See more</a></p>
 					</div>
 		  			<div class="blogs">
 						<h3>Travel</h3>
 						<p>From apartments and rooms to treehouses and boats: stay in unique spaces in 192 countries.</p>
-						<p><a href="#" class="boxB">See how to travel on Airbnb</a></p>
+						<p><a href="#" class="boxB">See more</a></p>
 					</div>
 		  			<div class="blogs">
 						<h3>Travel</h3>
 						<p>From apartments and rooms to treehouses and boats: stay in unique spaces in 192 countries.</p>
-						<p><a href="#" class="boxB">See how to travel on Airbnb</a></p>
+						<p><a href="#" class="boxB">See more</a></p>
 					</div>
 				</div>
 				<div class="col-md-3">
@@ -73,7 +73,7 @@
 						<center><h3>@jonaranola</h3>
 							<img src="img/jona.png" style="width: 130px; height: auto; opacity: 0.8;">
 						<p>From apartments and rooms to treehouses and boats: stay in unique spaces in 192 countries.</p>
-						<p><a href="#" class="boxA">See how to travel on Airbnb</a></p></center>
+						<p><a href="#" class="boxA">See more</a></p></center>
 					</div>
 				</div>
 				<div class="col-md-1"> </div>
@@ -86,11 +86,11 @@
     <div class="nav">
 		<div class="container">
         	<div class="container">
-			    <ul class="pull-left">
+			    <ul class="pull-left" id="navshow">
 			        <li><a href="#"><font style="font-family: lobster; text-transform: lowercase; font-size: 18px;">jonaranola</font></a></li>
 			        <li><a href="#">Browse</a></li>
 			    </ul>
-			    <ul class="pull-right">
+			    <ul class="pull-right" id="navhid">
 			        <li><a href="#">Blogs</a></li>
 			        <li><a href="#">Gallery</a></li>
 			        <li><a href="#">Resume</a></li>
@@ -111,7 +111,7 @@
 	  	  			<img src="img/nav.png">
 					<h3>Travel</h3>
 					<p>From apartments and rooms to treehouses and boats: stay in unique spaces in 192 countries.</p>
-					<p><a href="#" class="boxA">See how to travel on Airbnb</a></p>
+					<p><a href="#" class="boxA">See more</a></p>
 				</center>
 			</div>
 		  </div>
@@ -121,7 +121,7 @@
 		  	  		<img src="img/nav.png">
 					<h3>Travel</h3>
 					<p>From apartments and rooms to treehouses and boats: stay in unique spaces in 192 countries.</p>
-					<p><a href="#" class="boxA">See how to travel on Airbnb</a></p>
+					<p><a href="#" class="boxA">See more</a></p>
 				</center>
 			</div>
 	      </div>
@@ -131,7 +131,7 @@
 		  	  		<img src="img/nav.png">
 					<h3>Travel</h3>
 					<p>From apartments and rooms to treehouses and boats: stay in unique spaces in 192 countries.</p>
-					<p><a href="#" class="boxA">See how to travel on Airbnb</a></p>
+					<p><a href="#" class="boxA">See more</a></p>
 				</center>
 			</div>
 		</div>
@@ -141,7 +141,7 @@
 		  	  		<img src="img/nav.png">
 					<h3>Travel</h3>
 					<p>From apartments and rooms to treehouses and boats: stay in unique spaces in 192 countries.</p>
-					<p><a href="#" class="boxA">See how to travel on Airbnb</a></p>
+					<p><a href="#" class="boxA">See more</a></p>
 				</center>
 			</div>
 		  </div>
@@ -156,7 +156,7 @@
 	  	  			<img src="img/nav.png">
 					<h3>Travel</h3>
 					<p>From apartments and rooms to treehouses and boats: stay in unique spaces in 192 countries.</p>
-					<p><a href="#" class="boxA">See how to travel on Airbnb</a></p>
+					<p><a href="#" class="boxA">See more</a></p>
 				</center>
 			</div>
 		  </div>
@@ -166,7 +166,7 @@
 		  	  		<img src="img/nav.png">
 					<h3>Travel</h3>
 					<p>From apartments and rooms to treehouses and boats: stay in unique spaces in 192 countries.</p>
-					<p><a href="#" class="boxA">See how to travel on Airbnb</a></p>
+					<p><a href="#" class="boxA">See more</a></p>
 				</center>
 			</div>
 	      </div>
@@ -176,7 +176,7 @@
 		  	  		<img src="img/nav.png">
 					<h3>Travel</h3>
 					<p>From apartments and rooms to treehouses and boats: stay in unique spaces in 192 countries.</p>
-					<p><a href="#" class="boxA">See how to travel on Airbnb</a></p>
+					<p><a href="#" class="boxA">See more</a></p>
 				</center>
 			</div>
 		</div>
@@ -186,7 +186,7 @@
 		  	  		<img src="img/nav.png">
 					<h3>Travel</h3>
 					<p>From apartments and rooms to treehouses and boats: stay in unique spaces in 192 countries.</p>
-					<p><a href="#" class="boxA">See how to travel on Airbnb</a></p>
+					<p><a href="#" class="boxA">See more</a></p>
 				</center>
 			</div>
 		  </div>
@@ -197,9 +197,9 @@
     <div class="resume">
     	<div class="container">
     		<div class="row">
-		  		<div class="col-md-4">
+		  		<div class="col-md-10">
 		  			<div class="resumeOn">
-						<h3>Jona Marie Dueñas Rañola</h3>
+						<h3>Jona Ranola</h3>
 						<p>BS Computer Engineering Student</p>
 						<br />
 						<p><b>Personal Information</b></p>
@@ -220,11 +220,6 @@
 						<p>Freelancer - Digital Artist</p>
 						<p>Different offline gaming sites</p>
 						<p>Since 2009</p>
-
-						</div>
-					</div>
-		  		<div class="col-md-6">
-		  			<div class="resumeOn">
 						<br />
 						<p><b>Skills</b></p>
 						<p>HTML5/CSS</p>
@@ -247,8 +242,9 @@
 						<p>2007-2011: Manggahan High School</p>
 						<p>2001-2007: San Lorenzo Ruiz Elementary School</p>
 
-				</div>
-				</div>
+						</div>
+					</div>
+
 		  		<div class="col-md-2">
 		  			<div class="orangeShade-one"></div>
 		  			<div class="orangeShade-two"></div>
